@@ -1,3 +1,10 @@
 # learnfx
 
+#### VM options для запуска проектов JavaFX на JDK 11
+
+--module-path c:\path-to-javafx\javafx-sdk-11\lib  
+--add-modules=javafx.controls,javafx.fxml
+
+#### Projects
+
 javafx9be - JavaFX 9 by Example  
